# ohm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  OpenCL.md  clearance-performance-notes.md  ohm.natvis  package.xml  readme.md  test-map.ohm  todo.md  vcpkg.json
clu/: CMakeLists.txt  cl.hpp  cl2.hpp  clu.cpp  clu.h  cluBuffer.h  cluConfig.in.h  cluConstraint.cpp  cluConstraint.h  cluKernel.cpp  cluKernel.h  cluProgram.cpp  cluProgram.h  clubuffer.h  cluconstraint.cpp  cluconstraint.h  clukernel.cpp  clukernel.h  cluprogram.cpp  cluprogram.h
gputil/: CMakeLists.txt  gpuAccessException.cpp  gpuAccessException.h  gpuApiException.cpp  gpuApiException.h  gpuBuffer.h  gpuConfig.in.h  gpuDevice.h  gpuDeviceInfo.h  gpuEvent.h  gpuEventList.cpp  gpuEventList.h  gpuException.cpp  gpuException.h  gpuKernel.h  gpuPinMode.h  gpuPinnedBuffer.h  gpuPlatform.h  gpuProgram.h  gpuQueue.h  gpuThrow.cpp  gpuThrow.h  gpuVersion.h  gpu_ext.h  gpuaccessexception.cpp  gpuaccessexception.h  gpuapiexception.cpp  gpuapiexception.h  gpubuffer.h  gpuconfig.in.h  gpudevice.h  gpuevent.h  gpueventlist.cpp  gpueventlist.h  gpuexception.cpp  gpuexception.h  gpupinmode.h  gpupinnedbuffer.h  gpuplatform.h  gpuqueue.h  (+2 more)
gputil/cl/: gpuApiExceptionCode.cpp  gpuBuffer.cpp  gpuBufferDetail.h  gpuDevice.cpp  gpuDeviceDetail.h  gpuEvent.cpp  gpuEventDetail.h  gpuKernel.cpp  gpuKernel2.h  gpuKernelDetail.h  gpuPinnedBuffer.cpp  gpuPlatform2.h  gpuProgram.cpp  gpuProgramDetail.h  gpuQueue.cpp  gpuQueueDetail.h  gpuapiexceptioncode.cpp  gpubuffer.cpp  gpubufferdetail.h  gpudevice.cpp  gpudevicedetail.h  gpuevent.cpp  gpueventdetail.h  gpupinnedbuffer.cpp  gpuplatform2.h  gpuqueue.cpp  gpuqueuedetail.h
gputil/cuda/: cudaimportcl.h  cutil_atomic.h  cutil_decl.h  cutil_importcl.h  cutil_math.h  gpuApiExceptionCode.cpp  gpuBuffer.cpp  gpuBufferDetail.h  gpuDevice.cpp  gpuDeviceDetail.h  gpuEvent.cpp  gpuEventDetail.h  gpuKernel.cpp  gpuKernel2.h  gpuKernelDetail.h  gpuMemRegion.cpp  gpuMemRegion.h  gpuPinnedBuffer.cpp  gpuPlatform2.h  gpuProgram.cpp  gpuProgramDetail.h  gpuQueue.cpp  gpuQueueDetail.h  gpuapiexceptioncode.cpp  gpubuffer.cpp  gpubufferdetail.h  gpudevice.cpp  gpudevicedetail.h  gpuevent.cpp  gpueventdetail.h  gpupinnedbuffer.cpp  gpuplatform2.h  gpuqueue.cpp  gpuqueuedetail.h  ref.h
logutil/: CMakeLists.txt  LogUtil.cpp  LogUtil.h  LogUtilConfig.in.h  Logger.cpp  Logger.h  LoggerDetail.h
ohm/: Aabb.h  CMakeLists.txt  CalculateSegmentKeys.cpp  CalculateSegmentKeys.h  ClearanceProcess.cpp  ClearanceProcess.h  ClearingPattern.cpp  ClearingPattern.h  CompareMaps.cpp  CompareMaps.h  CopyUtil.cpp  CopyUtil.h  CovarianceVoxel.cpp  CovarianceVoxel.h  CovarianceVoxel.h-base  CovarianceVoxelCompute.h  DataType.cpp  DataType.h  DebugDraw.cpp  DebugDraw.h  DebugIDs.h  DecayRate.cpp  DecayRate.h  DefaultLayer.cpp  DefaultLayer.h  DefaultLayers.h  Density.cpp  Density.h  FloodFillLayeredWalker.cpp  FloodFillLayeredWalker.h  GpuCache.cpp  GpuCache.h  GpuCacheParams.h  GpuCachePostSyncHandler.h  GpuKey.h  GpuLayerCache.cpp  GpuLayerCache.h  GpuMap.cpp  GpuMap.h  GpuTransformSamples.cpp  (+206 more)
ohm/cl/: GpuMap.cpp  LineKeysQuery.cpp  NearestNeighboursQuery.cpp  (+8 more)
ohmapp/: CMakeLists.txt  DataSource.cpp  DataSource.h  MapHarness.cpp  MapHarness.h  OhmAppConfig.in.h  OhmAppCpu.cpp  OhmAppCpu.h  OhmAppGpu.cpp  OhmAppGpu.h  OhmAppGpuConfig.in.h  OhmPopulationHarness.cpp  OhmPopulationHarness.h  SlamIOSource.cpp  SlamIOSource.h  ohmappmain.inl  ohmpopmain.inl
ohmgpu/: CMakeLists.txt  ClearanceProcess.cpp  ClearanceProcess.h  GpuCache.cpp  GpuCache.h  GpuCacheParams.h  GpuCachePostSyncHandler.h  GpuCacheStats.h  GpuKey.h  GpuLayerCache.cpp  GpuLayerCache.h  GpuLayerCacheParams.cpp  GpuLayerCacheParams.h  GpuMap.cpp  GpuMap.h  GpuNdtMap.cpp  GpuNdtMap.h  GpuTransformSamples.cpp  GpuTransformSamples.h  GpuTsdfMap.cpp  GpuTsdfMap.h  LineKeysQueryGpu.cpp  LineKeysQueryGpu.h  LineQueryGpu.cpp  LineQueryGpu.h  OhmGpu.cpp  OhmGpu.h  OhmGpuConfig.in.h  RayItem.h  RaysQueryGpu.cpp  RaysQueryGpu.h
ohmheightmap/: CMakeLists.txt  Heightmap.cpp  Heightmap.h  HeightmapMesh.cpp  HeightmapMesh.h  HeightmapMode.cpp  HeightmapMode.h  HeightmapSerialise.cpp  HeightmapSerialise.h  HeightmapUtil.cpp  HeightmapUtil.h  HeightmapVoxel.cpp  HeightmapVoxel.h  HeightmapVoxelType.h  OhmHeightmapConfig.in.h  PlaneFillLayeredWalker.cpp  PlaneFillLayeredWalker.h  PlaneFillWalker.cpp  PlaneFillWalker.h  PlaneWalkVisitMode.h  PlaneWalker.cpp  PlaneWalker.h  TriangleEdge.h  TriangleNeighbours.h  UpAxis.h
ohmheightmapimage/: CMakeLists.txt  HeightmapImage.cpp  HeightmapImage.h  OhmHeightmapImageConfig.in.h
ohmheightmaputil/: CMakeLists.txt  HeightmapImage.cpp  HeightmapImage.h  OhmHeightmapUtilConfig.in.h
ohmtools/: CMakeLists.txt  OhmCloud.cpp  OhmCloud.h  OhmGen.cpp  OhmGen.h  OhmToolsConfig.in.h  ohmcloud.cpp  ohmcloud.h  ohmgen.cpp  ohmgen.h  ohmtoolsconfig.in.h
ohmutil/: CMakeLists.txt  Colour.cpp  Colour.h  GlmStream.h  LineWalk.h  OhmUtil.cpp  OhmUtil.h  OhmUtilConfig.in.h  Options.h  PlyMesh.cpp  PlyMesh.h  PlyPointStream.cpp  PlyPointStream.h  PointsDoubleBuffer.h  PointsDoubleBuffer.inl  PointsRingBuffer.h  PointsRingBuffer.inl  Profile.cpp  Profile.h  ProfileMarker.cpp  ProfileMarker.h  ProgressMonitor.cpp  ProgressMonitor.h  SafeIO.cpp  SafeIO.h  ScopedTimeDisplay.cpp  ScopedTimeDisplay.h  SpinLock.cpp  SpinLock.h  VectorHash.h  colour.cpp  colour.h  cxxopts.hpp  glmstream.h  linewalk.h  ohmutil.cpp  ohmutil.h  options.h  p2p.h  plymesh.cpp  (+18 more)
slamio/: CMakeLists.txt  DataChannel.h  PointCloudReader.cpp  PointCloudReader.h  PointCloudReaderMiniPly.cpp  PointCloudReaderMiniPly.h  PointCloudReaderPdal.cpp  PointCloudReaderPdal.h  PointCloudReaderPly.cpp  PointCloudReaderPly.h  PointCloudReaderTraj.cpp  PointCloudReaderTraj.h  PointCloudReaderXyz.cpp  PointCloudReaderXyz.h  Points.cpp  Points.h  SlamCloudLoader.cpp  SlamCloudLoader.h  SlamCloudLoader_las.cpp  SlamCloudLoader_pdal.cpp  SlamCloudLoader_pdal_stream.cpp  SlamIO.cpp  SlamIO.h  SlamIOConfig.in.h  slamcloudloader.cpp  slamcloudloader.h
utils/: CMakeLists.txt
(+333 files in other folders)
