<?xml version="1.0"?>
<package format="2">
    <name>ohm</name>
    <version>0.5.0</version>
    <description>Occupancy Homogeneous Map libraries</description>
    <maintainer email="kazys.stepanas@csiro.au">Kazys Stepanas</maintainer>
    <license>Modified MIT</license>

    <depend>libglew-dev</depend>
    <depend>libglfw3-dev</depend>
    <depend>libglm-dev</depend>
    <depend>ocl-icd-opencl-dev</depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>

